...
    <string name="airing_today">Airing today %s</string>
    <string name="discover">Discover %s</string>
    <string name="summary">Summary</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="biography">Biography</string>
    <string name="release_date">Release Date: %s</string>
    <string name="rating">%s/10</string>
    <string name="born">Born on %s</string>
    <string name="from">From %s</string>
    <string name="death">Death in %s</string>
    <string name="known_as">Also known as %s</string>
...
